chore: publish to menux-deployment